--- a/src/style/Textpattern/sass/modules/fluxbb/_layout_admin.scss
+++ b/src/style/Textpattern/sass/modules/fluxbb/_layout_admin.scss
@@ -24,15 +24,6 @@
     td.location span {
         display: inline-block;
     }
-
-    label {
-        display: block;
-    
-        &.conl {
-            display: inline-block;
-            margin-right: 0.5em;
-        }
-    }
 }
 
 #forumperms thead th,
